--- a/heranca_e_argumentos/src/static/css/index.css
+++ b/heranca_e_argumentos/src/static/css/index.css
@@ -1,11 +1,11 @@
 #titulo-index {
-    color: #40504b;
+    color: #093426;
     font-family: "Raleway:wght@400", sans-serif;
     font-size: 5rem;
 }
 
 #texto-index {
-    color: #ecad10e8;
+    color: #0c5c42;
     font-family: "Wix+Madefor+Text", sans-serif;
     font-size: 5.65rem; 
 }
