--- a/heranca_e_argumentos/src/templates/base.html
+++ b/heranca_e_argumentos/src/templates/base.html
@@ -7,7 +7,7 @@
     {% block head %}
 
     {% endblock %}    
-    <link rel="stylesheet" type="text/css" href="/static/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/base-styles.css">
 </head>
 <body>
     <!-- Logo e menu -->
