--- a/heranca_e_argumentos/src/templates/index.html
+++ b/heranca_e_argumentos/src/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html"  %}
 
 {% block head %}
-<link rel="stylesheet" type="text/css" href="../static/index.css">
+<link rel="stylesheet" type="text/css" href="/static/css/index.css">
 <title>Página Inicial - Portfólio de Marcus Betti</title>
 {% endblock %}
 
