--- a/heranca_e_argumentos/src/templates/projetos.html
+++ b/heranca_e_argumentos/src/templates/projetos.html
@@ -1,7 +1,7 @@
 {% extends "base.html"  %}
 
 {% block head %}
-<link rel="stylesheet" type="text/css" href="../static/projetos.css">
+<link rel="stylesheet" type="text/css" href="/static/css/projetos.css">
 <title>Projetos - Portfólio de Marcus Betti</title>
 {% endblock %}
 
