--- a/heranca_e_argumentos/src/templates/contato.html
+++ b/heranca_e_argumentos/src/templates/contato.html
@@ -1,12 +1,12 @@
 {% extends "base.html"  %}
 
 {% block head %}
-<link rel="stylesheet" type="text/css" href="../static/contato.css">
+<link rel="stylesheet" type="text/css" href="/static/css/contato.css">
 <title>Contato - Portfólio de Marcus Betti</title>
 {% endblock %}
 
 {% block content %}
-    <br>
+    <br><br><br><br>
     <div>
         <h2>Contato</h2>
         <h3>Mande uma mensagem:</h3>
@@ -14,24 +14,41 @@
         <br>
     </div>
 
-    <div>
     <!-- Formulário -->
-        <form>
-            Nome completo<br>
-            <input type="text" name="e-mail">
-            Seu e-mail<br>
-            <input type="text" name="assunto"><br>
-            Sua mensagem<br>
-            <textarea></textarea><br>
-            <input type="submit" value="enviar">
-            <!-- BOTÃO ENVIAR COM FUNDO ESCURO -->
+    <div class="flex-container">
+        <form class="formulario">
+            <br>
+            <!-- <fieldset> -->
+            <div>
+                <label for="nome">Nome completo:</label>
+                <input type="text" id="nome" name="nome" placeholder="Digite seu nome">
+            </div>
+            <div>
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email" placeholder="Digite seu e-mail">
+            </div>
+            <div>
+                <label for="mensagem">Mensagem:</label>
+                <input type="textarea" id="mensagem" name="mensagem" placeholder="Digite sua mensagem">
+            </div>
+            <!-- </fieldset> -->
+            <button type="submit">Enviar</button>
         </form>
+        <br>
+        
+        <aside >
+            <div class="links">
+                <img id="icone_linkedin" src="../static/img/icon-linkedin.svg" alt="Ícone do LinkedIn">
+                <a href="https://www.linkedin.com/in/marcus-betti-715b6614a/">linkedin.com/in/marcus-betti-715b6614a/</a>
+                <br>
+                <img id="icone_github" src="../static/img/icons8-github.svg" alt="Ícone do Github">
+                <a href="https://github.com/marcusvbe">github.com/marcusvbe</a>
+                <br>
+                <img id="icone_email" src="../static/img/envelope.svg" alt="Ícone de e-mail"></>
+                <a href="mailto:marcusbetti@gmail.com">marcusbetti@gmail.com</a>
+        
+            
+            </div>
+        </aside>
     </div>
-
-    <div>
-        linkedin.com/in/marcus-betti-715b6614a/
-        marcusbetti@gmail.com
-        github.com/marcusvbe
-    </div>
-
 {% endblock %} 
