--- a/src/static/css/projetos.css
+++ b/src/static/css/projetos.css
@@ -1,3 +1,4 @@
+
 h2 {
     color: #0c5c42;
     font-size: 3.5rem;
@@ -8,90 +9,131 @@ p {
     font-size: 1.8rem;
 }
 
-/* Estilo padrão para o carrossel de imagens */
-.slick-slider {
-    /* position: relative; */
-    /* display: block; */
-    box-sizing: border-box;
-    user-select: none;
-    touch-action: pan-y;
-    -webkit-tap-highlight-color: transparent;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; /* Define a altura do carrossel para 100% da altura da janela */
-}
-  
-  /* .slick-slider img {
-    max-width: 800px;
-    max-height: 500px;
-  } */
+hr {
+  color: #ecad10e8;
+  background-color: #ecad10e8;
+  height: 5px;
 
-  /* Estilo para cada slide do carrossel de imagens */
-  .slick-slide {
-    position: relative;
-    display: block;
-    box-sizing: border-box;
+}
+
+.carousel {
+  width: 100%;
+  max-width: 800px;
+  height: 500px;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+}
+
+.carousel-inner {
+  width: 300%;
+  height: 100%;
+  position: relative;
+  transition: left 0.6s;
+}
+
+.carousel-item {
+  width: 33.33%;
+  height: 100%;
+  float: left;
+  position: relative;
+}
+
+.carousel-item img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  cursor: pointer;
+}
+
+.carousel-item-content {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #fff;
+  width: 80%;
+}
+
+.carousel-item-content a {
+  display: block;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.carousel-item-title {
+  font-size: 24px;
+  margin-bottom: 10px 0;
+}
+
+.carousel-item-description {
+  font-size: 16px;
+}
+
+/* Responsivo */
+@media (max-width: 800px) {
+  .carousel {
+    max-width: 100%;
+    height: auto;
   }
-  
-  /* Estilo para a imagem de cada slide do carrossel de imagens */
-  .slick-slide img {
+  .carousel-inner {
     width: 100%;
     height: auto;
   }
-  
-  /* Estilo para o texto de cada slide do carrossel de imagens */
-  .slide-text {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 20px;
-    background-color: rgba(0, 0, 0, 0.6);
-    color: #fff;
-  }
-  
-  .slide-text h3 {
-    margin: 0;
-    font-size: 24px;
-  }
-  
-  .slide-text p {
-    margin: 10px 0 0;
-    font-size: 16px;
-  }
-  
-  /* Estilo para o link de cada slide do carrossel de imagens */
-  .slick-slide a {
-    display: block;
+  .carousel-item {
     width: 100%;
-    height: 100%;
   }
-  
-  /* Estilo padrão para as setas do carrossel de imagens */
-.slick-arrow {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 1;
-    display: block;
-    width: 60px;
-    height: 60px;
-    padding: 0;
-    border: none;
-    background: transparent;
-    cursor: pointer;
-    font-size: 0;
-    outline: none;
-  }
-  
-  /* Estilo para a seta "Anterior" */
-  .slick-prev {
-    left: 10px;
-  }
-  
-  /* Estilo para a seta "Próximo" */
-  .slick-next {
-    right: 10px;
-  }
-  
+}
+
+/* Setas de navegação */
+.carousel-control {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+  width: 40px;
+  height: 40px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  text-align: center;
+  line-height: 40px;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.carousel-control.left {
+  left: 10px;
+}
+
+.carousel-control.right {
+  right: 10px;
+}
+
+/* Pontos de navegação */
+.carousel-indicators {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.carousel-indicator {
+  width: 10px;
+  height: 10px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 50%;
+  margin: 0 5px;
+}
+
+.carousel-indicator.active {
+  background-color: #333;
+}
