--- a/src/templates/projetos.html
+++ b/src/templates/projetos.html
@@ -2,70 +2,90 @@
 
 {% block head %}
 <link rel="stylesheet" type="text/css" href="/static/css/projetos.css">
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css"/>
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css"/>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
 <title>Projetos - Portfólio de Marcus Betti</title>
 {% endblock %}
 
 {% block content %}
-<!-- carrossel de imagens - com cada texto, imagem e link de projeto aparecendo de cada vez no mesmo lugar no centro da págia VER COMO SE FAZ ISSO -->
-    <section id="textos-projetos">
-        <br>
-    
-        <h2>Projetos</h2>
-        <br>
-
-        <div class="slick-slider">
-            <div class="slick-slide">
-              <a href="https://www.google.com">
-                <img src="https://www.pontotel.com.br/wp-content/uploads/2022/05/imagem-corporativa.webp" alt="Imagem 1">
-              </a>
-              <div class="slide-text">
-                <h3>{{projeto1}}</h3>
-                <p>Texto da imagem 1</p>
+<!-- carrossel de imagens -->
+    <br>
+    <br>    
+    <h2>Projetos</h2>
+    <hr>
+    <br>
+    <div class="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item">
+          <div class="carousel-item-content">
+            <a href="https://github.com/api-fatec-primeiro-semestre/api-primeiro-semestre" target="_blank">
+              <img src="/static/img/COVID_proj.png" alt="Imagem Projeto API Covid Longa">
+            </a>
+              <h2 class="carousel-item-title">{{projeto1}}</h2>
+              <p class="carousel-item-description">Projeto integrado do 1º semestre do curso de Desenvolvimento de Software Multiplataforma da FATEC "Professor Jessen Vidal" - São José dos Campos</p>
               </div>
-            </div>
-            <div class="slick-slide">
-              <a href="https://www.google.com">
-                <img src="https://www.pontotel.com.br/wp-content/uploads/2022/05/imagem-corporativa-o-que-e-imagem-corporativa.webp" alt="Imagem 2">
-              </a>
-              <div class="slide-text">
-                <h3>{{projeto2}}</h3>
-                <p>Texto da imagem 2</p>
               </div>
-            </div>
-            <div class="slick-slide">
-                <a href="https://www.google.com">
-                  <img src="https://www.pontotel.com.br/wp-content/uploads/2022/05/imagem-corporativa-quais-sao-as-vantagens-de-ter-uma-boa-imagem-corporativa.webp" alt="Imagem 3">
-                </a>
-                <div class="slide-text">
-                  <h3>{{projeto3}}</h3>
-                  <p>Texto da imagem 3</p>
-                </div>
-            </div>
-            <!-- Adicione mais divs conforme necessário -->
-            <button type="button" class="slick-prev">Anterior</button>
-            <button type="button" class="slick-next">Próximo</button>
-        </div>
+              
+        <div class="carousel-item">
+          <div class="carousel-item-content">
+              <a href="https://github.com/marcusvbe/Desafio-2-UNES" target="_blank">
+              <img src="/static/img/desafio_proj.png" alt="Imagem Desafio Unes">
+              </a>
+              <h2 class="carousel-item-title">{{projeto2}}</h2>
+              <p class="carousel-item-description">Descrição 2</p>
+              </div>
+              </div>
+              
+        <div class="carousel-item">
+          <div class="carousel-item-content">
+              <a href="https://github.com/marcusvbe/repositorio_digital" target="_blank">
+              <img src="/static/img/portfolio_proj.png" alt="Imagem Portfólio - Design Digital">
+              </a>
+              <h2 class="carousel-item-title">{{projeto3}}</h2>
+              <p class="carousel-item-description">Descrição 3 (repositório do portfólio temporariamente com acesso restrito).</p>
+              </div>
+              </div>
+              </div>
+              <div class="carousel-control left" onclick="changeSlide(-1)"><</div>
+              <div class="carousel-control right" onclick="changeSlide(1)">></div>
+              <ul class="carousel-indicators"></ul>
+              </div>
+    </div>
+  
+                <script>
+                  var carousel = document.querySelector('.carousel');
+                  var carouselInner = carousel.querySelector('.carousel-inner');
+                  var carouselItems = carouselInner.querySelectorAll('.carousel-item');
+                  var currentIndex = 0;
+                  var timer = setInterval(function() {
+                    changeSlide(1);
+                  }, 5000);
+              
+                  function changeSlide(n) {
+                    clearInterval(timer);
+                    currentIndex += n;
+                    if (currentIndex < 0) {
+                      currentIndex = carouselItems.length - 1;
+                    } else if (currentIndex >= carouselItems.length) {
+                      currentIndex = 0;
+                    }
+                    carouselInner.style.left = -currentIndex * 100 + '%';
+                    updateIndicators();
+                    timer = setInterval(function() {
+                      changeSlide(1);
+                    }, 5000);
+                  }
+              
+                  function updateIndicators() {
+                    var indicators = carousel.querySelector('.carousel-indicators');
+                    var indicatorHTML = '';
+                    for (var i = 0; i < carouselItems.length; i++) {
+                      if (i === currentIndex) {
+                        indicatorHTML += '<li class="carousel-indicator active"></li>';
+                      } else {
+                        indicatorHTML += '<li class="carousel-indicator"></li>';
+                      }
+                    }
+                    indicators.innerHTML = indicatorHTML;
+                  }
+                </script>
 
-    <hr> 
-    
-    <script>
-        $(document).ready(function(){
-          $('.slick-slider').slick({
-            dots: true,
-            infinite: true,
-            speed: 500,
-            slidesToShow: 1,
-            slidesToScroll: 1,
-            autoplay: true,
-            autoplaySpeed: 6000,
-            prevArrow: '<button type="button" class="slick-prev">Anterior</button>',
-            nextArrow: '<button type="button" class="slick-next">Próximo</button>'
-          });
-        });
-      </script>
-      <!-- deixar as imagens menores, deixar a mudança mais lenta, colocar setas como botões para mudar de imagens nas laterais -->
 {% endblock %} 
