--- a/src/templates/sobre.html
+++ b/src/templates/sobre.html
@@ -17,17 +17,12 @@
         </div>
         <div class="flex-container" >
             <p>
-                Texto falando que sou formado em Ciências Sociais pela Universidade de 
-São Paulo e tradutor de Inglês há 8 anos. Talvez algo sobre como meu 
-interesse pela programação começou, pelo trabalho de tradução e ter que 
-lidar com programas, conversão de arquivos, regex, etc. Sobre meus 
-interesses em programação, o que pretendo fazer? E que estou cursando 
-Desenvolvimento de Software Mutiplataforma na Fatec São José dos 
-Campos. Sobre meus interesses em programação, o que pretendo fazer? E 
-que estou cursando Desenvolvimento de Software Mutiplataforma na Fatec 
-São José dos Campos. Sobre meus interesses em programação, o que 
-pretendo fazer? E que estou cursando Desenvolvimento de Software 
-Mutiplataforma na Fatec São José dos Campos.
+            Fiz graduação em Ciências Sociais pela Universidade de 
+            São Paulo e trabalho como tradutor de Inglês há 8 anos. Meu 
+            interesse pela programação foi despertado pelo trabalho de tradução. Traduzir envolve 
+            lidar com muitos programas, conversões de arquivos, regex, etc. Estou cursando o primeiro semestre do
+            curso Desenvolvimento de Software Mutiplataforma na FATEC "Professor Jessen Vidal" - São José dos Campos.
+            Ainda não tenho bem definido o caminho que pretendo seguir na programação.
             </p>
             <img class="flex-img" alt="Foto" srcset="../static/img/foto_profissional_peq.jpg 300w, 
             ../static/img/foto_profissional.jpg 900w"
