--- a/api/templates/contato.html
+++ b/api/templates/contato.html
@@ -10,45 +10,19 @@
     <div>
         <h2>Contato</h2>
         <hr>
-        <h3>Mande uma mensagem:</h3>
-        <br>
+        <br><br>
     </div>
 
-    <!-- Formulário -->
-    <div class="flex-container">
-        <form class="formulario">
-            <br>
-            <!-- <fieldset> -->
-            <div>
-                <label for="nome">Nome completo:</label>
-                <input type="text" id="nome" name="nome" placeholder="Digite seu nome">
-            </div>
-            <div>
-                <label for="email">E-mail:</label>
-                <input type="email" id="email" name="email" placeholder="Digite seu e-mail">
-            </div>
-            <div>
-                <label for="mensagem">Mensagem:</label>
-                <input type="textarea" id="mensagem" name="mensagem" placeholder="Digite sua mensagem">
-            </div>
-            <!-- </fieldset> -->
-            <button type="submit">Enviar</button>
-        </form>
-        <br>
-        
-        <aside >
-            <div class="links">
-                <img id="icone_linkedin" src="../static/img/icon-linkedin.svg" alt="Ícone do LinkedIn">
-                <a href="https://www.linkedin.com/in/marcus-betti-715b6614a/">linkedin.com/in/marcus-betti-715b6614a/</a>
-                <br>
-                <img id="icone_github" src="../static/img/icons8-github.svg" alt="Ícone do Github">
-                <a href="https://github.com/marcusvbe">github.com/marcusvbe</a>
-                <br>
-                <img id="icone_email" src="../static/img/envelope.svg" alt="Ícone de e-mail"></>
-                <a href="mailto:marcusbetti@gmail.com">marcusbetti@gmail.com</a>
-        
-            
-            </div>
-        </aside>
+
+    <div class="links">
+        <img id="icone_linkedin" src="../static/img/icon-linkedin.svg" alt="Ícone do LinkedIn">
+        <a href="https://www.linkedin.com/in/marcus-betti-715b6614a/" target=”_blank”>linkedin.com/in/marcus-betti-715b6614a/</a>
+        <br><br>
+        <img id="icone_github" src="../static/img/icons8-github.svg" alt="Ícone do Github">
+        <a href="https://github.com/marcusvbe" target=”_blank”>github.com/marcusvbe</a>
+        <br><br>
+        <img id="icone_email" src="../static/img/envelope.svg" alt="Ícone de e-mail"></b>
+        <a href="mailto:marcusbetti@gmail.com">marcusbetti@gmail.com</a>
     </div>
+  
 {% endblock %} 
