--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -8,10 +8,17 @@
 
 {% block content %}
 
-<br><br><br><br><br><br>
+    <br>
     <div>
         <h1 id="titulo-index">Seja bem-vindo!</h1>
-        <h2 id="texto-index">Portfólio de Marcus Betti</h2>
+        
+        <h2 id="subtitulo-index">Portfólio de Marcus Betti</h2>
+        <br><br><br>
+    </div>
+    <div>
+        <div class="texto-index">Aluno do curso de Desenvolvimento de Software Multiplataforma</div>
+        <div class="texto-index">FATEC "Professor Jessen Vidal" – São José dos Campos – SP</div>
+        <div class="texto-index">Ingresso no início de 2023</div>
     </div>
     <br><br>
 
