--- a/api/templates/sobre.html
+++ b/api/templates/sobre.html
@@ -15,19 +15,20 @@
             </h2>
             <hr>
         </div>
+        <br><br>
         <div class="flex-container" >
+            <div class="flex-text">
             <p>
             Fiz graduação em Ciências Sociais pela Universidade de 
             São Paulo e trabalho como tradutor de Inglês há 8 anos. Meu 
             interesse pela programação foi despertado pelo trabalho de tradução. Traduzir envolve 
             lidar com muitos programas, conversões de arquivos, regex, etc. Estou cursando o primeiro semestre do
-            curso Desenvolvimento de Software Mutiplataforma na FATEC "Professor Jessen Vidal" - São José dos Campos.
+            curso Desenvolvimento de Software Mutiplataforma na FATEC "Professor Jessen Vidal" – São José dos Campos.
             Ainda não tenho bem definido o caminho que pretendo seguir na programação.
-            </p>
-            <img class="flex-img" alt="Foto" srcset="../static/img/foto_profissional_peq.jpg 300w, 
-            ../static/img/foto_profissional.jpg 900w"
-            sizes="(max-width: 900px) 150px, 600px"> 
+            </p></div>
+            <img class="flex-img" alt="Foto" srcset="../static/img/foto_profissional_peq.jpg 500w, 
+            ../static/img/foto_profissional.jpg 900w">
         </div>
-        <br><br>
+        <br><br><br><br>
     
     {% endblock %} 
