--- a/api/static/css/projetos.css
+++ b/api/static/css/projetos.css
@@ -12,14 +12,14 @@ p {
 hr {
   color: #ecad10e8;
   background-color: #ecad10e8;
-  height: 5px;
+  height: 0.3125rem;
 
 }
 
 .carousel {
   width: 100%;
-  max-width: 800px;
-  height: 500px;
+  max-width: 50rem;
+  height: 31.25rem;
   margin: 0 auto;
   overflow: hidden;
   position: relative;
@@ -64,28 +64,30 @@ hr {
 }
 
 .carousel-item-title {
-  font-size: 24px;
-  margin-bottom: 10px 0;
+  font-size: 1.5rem;
+  margin-bottom: 0.625rem 0;
 }
 
 .carousel-item-description {
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 /* Responsivo */
-@media (max-width: 800px) {
+/* @media (max-width: 800px) {
   .carousel {
     max-width: 100%;
+    height: 100%;
+  }
+  .carousel-item {
+    width: 100%;
     height: auto;
   }
   .carousel-inner {
     width: 100%;
-    height: auto;
+    height: 100%;
   }
-  .carousel-item {
-    width: 100%;
-  }
-}
+  
+} */
 
 /* Setas de navegação */
 .carousel-control {
@@ -93,28 +95,28 @@ hr {
   top: 50%;
   transform: translateY(-50%);
   z-index: 1;
-  width: 40px;
-  height: 40px;
+  width: 2.5rem;
+  height: 2.5rem;
   background-color: rgba(0, 0, 0, 0.5);
   color: #fff;
   text-align: center;
-  line-height: 40px;
-  font-size: 24px;
+  line-height: 2.5rem;
+  font-size: 1.5rem;
   cursor: pointer;
 }
 
 .carousel-control.left {
-  left: 10px;
+  left: 0.625rem;
 }
 
 .carousel-control.right {
-  right: 10px;
+  right: 0.625rem;
 }
 
 /* Pontos de navegação */
 .carousel-indicators {
   position: absolute;
-  bottom: 10px;
+  bottom: 0.625rem;
   left: 50%;
   transform: translateX(-50%);
   z-index: 1;
@@ -127,13 +129,55 @@ hr {
 }
 
 .carousel-indicator {
-  width: 10px;
-  height: 10px;
+  width: 0.625rem;
+  height: 0.625rem;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 50%;
-  margin: 0 5px;
+  margin: 0 0.3125rem;
 }
 
 .carousel-indicator.active {
   background-color: #333;
 }
+
+/* Media query for mobile devices */
+@media (max-width: 800px) {
+   .carousel-control {
+    width: 1rem; /* Decreased width by 30% */
+    height: 1rem; /* Decreased height by 30% */
+    font-size: 1rem; /* Decreased font size by 30% */
+    line-height: 1rem; /* Adjusted line height */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  } 
+
+  .carousel-control.left {
+    left: 0.4rem; /* Moved 1rem farther from the left edge and adjusted for smaller size */
+  }
+
+  .carousel-control.right {
+    right: 0.4rem; /* Moved 1rem farther from the right edge and adjusted for smaller size */
+  } 
+} 
+/* 
+.carousel-control {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+  width: 2.5rem;
+  height: 2.5rem;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  text-align: center;
+  line-height: 2.5rem;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+.carousel-control.left {
+  left: 0.625rem;
+}
+.carousel-control.right {
+  right: 0.625rem;
+} */
