--- a/api/static/css/sobre.css
+++ b/api/static/css/sobre.css
@@ -1,30 +1,3 @@
-#foto {
-    width: 20%;
-}
-
-hr {
-    color: #ecad10e8;
-    background-color: #ecad10e8;
-    height: 5px;
-
-}
-
-/* deixar textosobremim e foto (ids) um do lado do outro */
-
-.flex-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 3rem;
-}
-
-.flex-img {
-    align-self: flex-end;
-    margin-left: 2.5rem;
-    flex-grow: 2;
-    max-width: 23%;
-}
-
 h2 {
     color: #0c5c42;
     font-size: 3.5rem;
@@ -34,4 +7,59 @@ p {
     color: #093426;
     font-size: 1.6rem;
 }
+
+
+hr {
+    color: #ecad10e8;
+    background-color: #ecad10e8;
+    height: 5px;
+
+}
+
+.flex-container {
+    display: flex;
+    flex-wrap: wrap; /* Permite que os elementos sejam quebrados para a próxima linha em telas menores */
+  }
+  
+  .flex-text {
+    flex: 1; /* Ocupa 1 unidade flexível para se ajustar ao espaço disponível */
+    padding-right: 1rem; /* Espaçamento opcional entre o texto e a imagem */
+  }
+  
+  .flex-img {
+    flex: 1; /* Ocupa 1 unidade flexível para se ajustar ao espaço disponível */
+    max-width: 23%; /* Limita a largura máxima da imagem em relação ao tamanho do contêiner */
+    height: auto; /* Mantém a proporção da imagem */
+  }
+  
+  /* Media query para telas menores */
+  @media (max-width: 767px) {
+    .flex-container {
+      flex-direction: column; /* Altera a direção do layout para vertical */
+    }
+  
+    .flex-text {
+        flex: none;
+        max-width: 100%;
+    }
+
+    .flex-img {
+      flex: none; /* Remove a flexibilidade para que cada elemento ocupe 100% da largura disponível */
+      max-width: 50%; /* Restaura a largura */
+      margin-bottom: 1rem;
+      margin-left: auto; /* Centraliza a imagem horizontalmente */
+      margin-right: auto; /* Centraliza a imagem horizontalmente */
+      order: -1; /* Altera a ordem dos elementos para a imagem aparecer acima do texto */
+    }
+    h2 {
+        font-size: 3rem;
+    }
+/*     
+    p {
+        font-size: 1.3rem;
+    } */
+  }
+  
+
+
 
