--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -12,10 +12,10 @@
 <body>
     <!-- Logo e menu -->
     <nav class="navbar">
-      <div>
+      <div class="divlogo">
           <img class="logo" src="../static/img/logo_port.png">
       </div>
-      <ul class="nav-list">
+      <ul class="nav-list" id="navi-list">
           <li class="list-item">
               <a href="/">Página inicial</a>
           </li>
@@ -29,7 +29,12 @@
               <a href="contato.html">Contato</a>
           </li>
       </ul>
-  </nav>
+      <div class="menu" id="toggle-button">
+        <div class="menu-line"></div>
+        <div class="menu-line"></div>
+        <div class="menu-line"></div>
+      </div>
+    </nav>
       
   <main>
         <!-- Conteúdo da página aqui -->
@@ -40,7 +45,15 @@
   </main>
     <div>
         <footer>© Marcus Betti 2023</footer>
-        <br><br>
+        <!-- <br><br> -->
     </div>
 </body>
+<script>
+    const toggleButton = document.getElementById('toggle-button');
+    const naviList = document.getElementById('navi-list');
+
+    toggleButton.addEventListener('click', () => {
+        naviList.classList.toggle('active');
+    } )
+</script>
 </html>
