--- a/api/templates/projetos.html
+++ b/api/templates/projetos.html
@@ -8,10 +8,8 @@
 {% block content %}
 <!-- carrossel de imagens -->
     <br>
-    <br>    
     <h2>Projetos</h2>
     <hr>
-    <br>
     <div class="carousel">
       <div class="carousel-inner">
         <div class="carousel-item">
@@ -20,7 +18,9 @@
               <img src="/static/img/COVID_proj.png" alt="Imagem Projeto API Covid Longa">
             </a>
               <h2 class="carousel-item-title">{{projeto1}}</h2>
-              <p class="carousel-item-description">Projeto integrado do 1º semestre do curso de Desenvolvimento de Software Multiplataforma da FATEC "Professor Jessen Vidal" - São José dos Campos. Ele coleta e analisa dados sobre a Covid Longa a partir do sistema Datasus (Tabnet), para avaliar o impacto do "pós-pandemia" no Sistema Único de Saúde em algumas cidades do Vale do Paraíba: São José dos Campos, Jacareí e Taubaté.</p>
+              <p class="carousel-item-description">Projeto Integrado do 1º semestre do curso de Desenvolvimento de Software Multiplataforma da FATEC 
+                de São José dos Campos – SP. O site permite analisar e comparar alguns dados de saúde do sistema Datasus (Tabnet) a fim de 
+                identificar possíveis impactos da Covid longa em 3 cidades do Vale do Paraíba: São José dos Campos, Jacareí e Taubaté.</p>
               </div>
         </div>
               
@@ -30,7 +30,7 @@
               <img src="/static/img/desafio_proj.png" alt="Imagem Desafio Unes">
               </a>
               <h2 class="carousel-item-title">{{projeto2}}</h2>
-              <p class="carousel-item-description">Desenvolvido para a disciplina de Desenvolvimento Web, ministrada pelo professor Jean Costa no curso de DSM 1, este site simples vai ganhando novos recursos ao longo do semestre: Flask, MySQL, AWS, Docker Compose.</p>
+              <p class="carousel-item-description">Desenvolvido na disciplina de Desenvolvimento Web, ministrada pelo professor Jean Costa no 1º semestre de DSM 1, este site simples foi recebendo recursos ao longo do semestre: Flask, MySQL, AWS, Docker Compose e responsividade.</p>
               </div>
         </div>
               
@@ -40,7 +40,7 @@
               <img src="/static/img/portfolio_proj.png" alt="Imagem Portfólio - Design Digital">
               </a>
               <h2 class="carousel-item-title">{{projeto3}}</h2>
-              <p class="carousel-item-description">Desenvolvido ao longo do semestre em várias entregas parciais, o portfólio implementa o conteúdo coberto pela disciplina, como as tecnologias utilizadas, os princípios do design digital, a teoria das cores, a arquitetura de informação (repositório do portfólio temporariamente com acesso restrito).</p>
+              <p class="carousel-item-description">Desenvolvido ao longo do semestre em entregas parciais, o portfólio implementa o conteúdo coberto pela disciplina de Design Digital, como os os princípios do design digital, arquitetura de informação, psicologia das cores, CSS e seus frameworks, git e github.</p>
           </div>
         </div>
       </div>
@@ -49,7 +49,7 @@
               <ul class="carousel-indicators"></ul>
               </div>
     </div>
-  
+    <br><br>
     <script>
       var carousel = document.querySelector('.carousel');
       var carouselInner = carousel.querySelector('.carousel-inner');
