--- a/api/static/css/contato.css
+++ b/api/static/css/contato.css
@@ -11,7 +11,7 @@ h3 {
 hr {
   color: #ecad10e8;
   background-color: #ecad10e8;
-  height: 5px;
+  height: 0.3rem;
 
 }
 
@@ -35,52 +35,7 @@ a {
   
 a:hover {
     color:#E6CE1D;
-}
-/* fieldset {
-    border: none;
-    margin: 0;
-    padding: 0;
-  }
-   */
-/* label {
-    display: block;
-    font-size: 1rem;
-    font-weight: bold;
-    margin-bottom: 5px;
-  } */
-/*   
-input[type="text"],
-input[type="email"],
-input[type="textarea"] {
-    border-radius: 10px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-    background-color: #f5f5f5;
-    border: none;
-    color: #333;
-    font-size: 1rem;
-    margin-bottom: 10px;
-    padding: 10px;
-    width: 100%;
-
-  } */
-/*   
-  button[type="submit"] {
-    background-color: #DCA314;
-    border: none;
-    border-radius: 5px;
-    color: #1d1c1c;
-    cursor: pointer;
-    font-size: 1rem;
-    padding: 10px;
-    text-transform: uppercase;
-    width: 100%;
-  }
-   */
-  /* button[type="submit"]:hover {
-    background-color: #FDEC00;
-  }
-  */
-  #icone_linkedin {
+}  #icone_linkedin {
     width: 1rem;
     height: 1rem;
   }
