Ajustes finais nos textos do site

--- a/api/templates/sobre.html
+++ b/api/templates/sobre.html
@@ -20,11 +20,13 @@
             <div class="flex-text">
             <p>
             Fiz graduação em Ciências Sociais pela Universidade de 
-            São Paulo e trabalho como tradutor de Inglês há 8 anos. Meu 
-            interesse pela programação foi despertado pelo trabalho de tradução. Traduzir envolve 
-            lidar com muitos programas, conversões de arquivos, regex, etc. Estou cursando o primeiro semestre do
-            curso Desenvolvimento de Software Mutiplataforma na FATEC "Professor Jessen Vidal" – São José dos Campos.
-            Ainda não tenho bem definido o caminho que pretendo seguir na programação.
+            São Paulo e trabalho como tradutor de inglês para português há 8 anos. Meu 
+            interesse pela programação surgiu com o trabalho de tradução. Traduzir envolve 
+            lidar com muitos programas de computador, como as CAT tools (ferramentas de auxílio à tradução),
+            conversões de arquivos, etc. Estou cursando o 
+            primeiro semestre do curso Desenvolvimento de Software Mutiplataforma na FATEC 
+            "Professor Jessen Vidal" – São José dos Campos – SP. Ainda estou conhecendo as áreas da 
+            programação e tenho mais interesse pela área de back-end.
             </p></div>
             <img class="flex-img" alt="Foto" srcset="../static/img/foto_profissional_peq.jpg 500w, 
             ../static/img/foto_profissional.jpg 900w">
