Atualização na página Projetos

--- a/api/templates/projetos.html
+++ b/api/templates/projetos.html
@@ -30,7 +30,7 @@
               <img src="/static/img/desafio_proj.png" alt="Imagem Desafio Unes">
               </a>
               <h2 class="carousel-item-title">{{projeto2}}</h2>
-              <p class="carousel-item-description">Desenvolvido na disciplina de Desenvolvimento Web, ministrada pelo professor Jean Costa no 1º semestre de DSM 1, este site simples foi recebendo recursos ao longo do semestre: Flask, MySQL, AWS, Docker Compose e responsividade.</p>
+              <p class="carousel-item-description">Desenvolvido na disciplina de Desenvolvimento Web, ministrada pelo professor Jean Costa no 1º semestre de DSM 1, este site simples foi recebendo recursos ao longo do semestre: Flask, MySQL, Docker Compose e responsividade.</p>
               </div>
         </div>
               
