Atualização do portfólio com o API do 2o semestre de 2023, SAT - Sistema de gestão de chamados acadêmicos

--- a/api/templates/projetos.html
+++ b/api/templates/projetos.html
@@ -26,11 +26,11 @@
               
         <div class="carousel-item">
           <div class="carousel-item-content">
-              <a href="https://github.com/marcusvbe/Desafio-2-UNES" target="_blank">
+              <a href="https://github.com/marcusvbe/Site-Dev-Web-1.-semestre" target="_blank">
               <img src="/static/img/desafio_proj.png" alt="Imagem Desafio Unes">
               </a>
               <h2 class="carousel-item-title">{{projeto2}}</h2>
-              <p class="carousel-item-description">Desenvolvido na disciplina de Desenvolvimento Web, ministrada pelo professor Jean Costa no 1º semestre de DSM 1, este site simples foi recebendo recursos ao longo do semestre: Flask, MySQL, Docker Compose e responsividade.</p>
+              <p class="carousel-item-description">Desenvolvido na disciplina de Desenvolvimento Web, ministrada pelo professor Jean Costa no 1º semestre do curso de Desenvolvimento de Software Multiplataforma, este site simples foi recebendo recursos ao longo do semestre: Flask, MySQL, Docker Compose e responsividade.</p>
               </div>
         </div>
               
@@ -40,7 +40,22 @@
               <img src="/static/img/portfolio_proj.png" alt="Imagem Portfólio - Design Digital">
               </a>
               <h2 class="carousel-item-title">{{projeto3}}</h2>
-              <p class="carousel-item-description">Desenvolvido ao longo do semestre em entregas parciais, o portfólio implementa o conteúdo coberto pela disciplina de Design Digital, como os os princípios do design digital, arquitetura de informação, psicologia das cores, CSS e seus frameworks, git e github.</p>
+              <p class="carousel-item-description">DesenvolvidoS ao longo do semestre em entregas parciais, o portfólio implementa o conteúdo coberto pela disciplina de Design Digital, como os os princípios do design digital, arquitetura de informação, psicologia das cores, CSS e seus frameworks, git e github.</p>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <div class="carousel-item-content">
+            <a href="https://github.com/marcusvbe/FocusQuestAPI" target="_blank">
+              <img src="/static/img/api_Chamados.png" alt="Imagem Projeto API - 2/2023 Sistema de Chamados">
+            </a>
+            <h2 class="carousel-item-title">{{projeto4}}</h2>
+            <p class="carousel-item-description">O projeto integrado do 2º semestre de 2023 consistiu na criação de uma aplicação de gestão de chamados. Nossa equipe optou por desenvolvê-lo direcionado a escolas e instituições de ensino.</p>
+            <br>
+            <p class="carousel-item-description">Minha participação neste projeto esteve mais concentrada no back-end, desenvolvendo a API, que incluiu a criação de rotas, operações de CRUD, e a lógica de funcionamento do sistema, como as mudanças de status do chamado refletindo ações do cliente, do técnico e do admin. Também fiz integrações com o front-end.</p>
+            <br>
+            <p class="carousel-item-description">Tecnologias utilizadas: Figma, Node.js, Javascript, Sqlite, Typescript, React, Prisma, Github.</p>
+
           </div>
         </div>
       </div>
