Pequena correção no texto da pag projetos

--- a/api/templates/projetos.html
+++ b/api/templates/projetos.html
@@ -50,7 +50,7 @@
               <img src="/static/img/api_Chamados.png" alt="Imagem Projeto API - 2/2023 Sistema de Chamados">
             </a>
             <h2 class="carousel-item-title">{{projeto4}}</h2>
-            <p class="carousel-item-description">O projeto integrado do 2º semestre de 2023 consistiu na criação de uma aplicação de gestão de chamados. Nossa equipe optou por desenvolvê-lo direcionado a escolas e instituições de ensino.</p>
+            <p class="carousel-item-description">O projeto integrado do 2º semestre de 2023 consistiu na criação de uma aplicação de gestão de chamados. Nossa equipe optou por desenvolvê-la direcionada a escolas e instituições de ensino.</p>
             <br>
             <p class="carousel-item-description">Minha participação neste projeto esteve mais concentrada no back-end, desenvolvendo a API, que incluiu a criação de rotas, operações de CRUD, e a lógica de funcionamento do sistema, como as mudanças de status do chamado refletindo ações do cliente, do técnico e do admin. Também fiz integrações com o front-end.</p>
             <br>
